# ze-monitor

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  version.sh
.github/: copilot-instructions.md
doc/: ze-monitor.1
src/: .gitignore  LICENSE  Makefile  args.cpp  args.h  args.hpp  build.sh  device.cpp  device.h  device.hpp  engine.cpp  engine.h  engine.hpp  helpers.cpp  helpers.h  helpers.hpp  power_domain.cpp  power_domain.h  process.cpp  process.h  process.hpp  psu.cpp  psu.h  temperature.cpp  temperature.h  temperature.hpp  version.txt  wip.cpp  ze-monitor.cpp  ze-monitor.hpp  ze-ncurses.cpp  ze-ncurses.h
src/debian/: .gitignore  changelog.template  control.template  files  install  rules
src/rpm/: ze-monitor.spec.template
tests/: CMakeLists.txt  test_temperature.cpp  ze_mock.cpp  ze_mock.h
